@startuml

title __SEND's Class Diagram__\n

  namespace com.journear.app {
    namespace ui {
      namespace send {
        class com.journear.app.ui.send.SendFragment {
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      namespace send {
        class com.journear.app.ui.send.SendViewModel {
            - mText : MutableLiveData<String>
            + SendViewModel()
            + getText()
        }
      }
    }
  }
  

  com.journear.app.ui.send.SendFragment -up-|> androidx.fragment.app.Fragment
  com.journear.app.ui.send.SendFragment o-- com.journear.app.ui.send.SendViewModel : sendViewModel
  com.journear.app.ui.send.SendViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
